# pinky_violet

./: 99-gpio.rules  99-pinky_camera.rulse  99-pinky_gpio.rules  README.md
doc/: imu_setup.md  lidar_setup.md
imu/launch/: icm20948_node_launch.py
imu/ros2_icm20948/: icm20948_node.py
lidar/launch/: sllidar_c1_launch.py
lidar/scripts/: create_udev_rules.sh  rplidar.rules
pinky_bringup/: package.xml  setup.py
pinky_bringup/launch/: bringup.launch.xml  fiducial.launch.xml
pinky_bringup/pinky_bringup/: camera.py  pinky_battery_publiser.py  pinky_battery_publisher.py  pinky_bringup.py  pinky_teleop_keyboard.py  pinkylib.py
pinky_bringup/pinky_bringup/pinkylib/: __init__.py  battery.py  buzzer.py  imu.py  ir.py  motor.py  ultrasonic.py
pinky_cartographer/: CMakeLists.txt  package.xml
pinky_cartographer/launch/: cartographer.launch.xml  map_view.launch.xml
pinky_cartographer/params/: cartographer_params.lua  initial_pose.lua  nav2_cartographer_params.lua
pinky_cartographer/rviz/: map_building.rviz
pinky_description/launch/: display.launch.xml  upload.launch.xml
pinky_description/rviz/: urdf_config.rviz
pinky_description/urdf/: gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  robot_gazebo.xacro  ros2_control.xacro
pinky_emotion/: setup.py
pinky_emotion/pinky_emotion/: pinky_emotion.py  pinky_lcd.py
pinky_gazebo/: CMakeLists.txt  package.xml
pinky_gazebo/config/: my_controllers.yaml
pinky_gazebo/launch/: nav2.launch.xml  (+2 more)
pinky_interfaces/: CMakeLists.txt  package.xml
pinky_navigation/: CMakeLists.txt  package.xml
(+19 files in other folders)
