<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pinky_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="kyung133851@pinkab.art">mkh</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>sllidar_c1_launch</depend>
  <depend>ros2_icm20948</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
